# Cubed

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  lsan.supp  pyproject.toml  tsan.supp  vcpkg.json
.github/workflows/: format-check.yml  release-build.yml
assets/data/block/: air.toml  dirt.toml  grass.toml  grass_block.toml  leaf.toml  log.toml  sand.toml  snowy_grass_block.toml  stone.toml  template.toml  water.toml
assets/shaders/: block_accumulation_f_shader.glsl  block_accumulation_v_shader.glsl  block_composite_f_shader.glsl  block_composite_v_shader.glsl  block_f_shader.glsl  block_v_shader.glsl  depth_fragment_shader.glsl  depth_shader.glsl  player_f_shader.glsl  player_v_shader.glsl  sky_f_shader.glsl  sky_v_shader.glsl  text_f_shader.glsl  text_v_shader.glsl  under_water_f_shader.glsl  under_water_v_shader.glsl  water_f_shader.glsl  water_v_shader.glsl
cmake/: Dependencies.cmake
cmake/modules/: Findzstd.cmake
include/Cubed/: AABB.hpp  app.hpp  camera.hpp  config.hpp  constants.hpp  debug_collector.hpp  dev_panel.hpp  input.hpp  map_table.hpp  primitive_data.hpp  renderer.hpp  shader.hpp  texture_manager.hpp  window.hpp
include/Cubed/gameplay/: biome.hpp  block.hpp  cave_carver.hpp  cave_path.hpp  chuck.hpp  chuck_status.hpp  chunk.hpp  chunk_generator.hpp  chunk_pos.hpp  chunk_status.hpp  client_chunk.hpp  client_player.hpp  client_world.hpp  game_mode.hpp  game_time.hpp  network_client.hpp  network_server.hpp  packet.hpp  path.hpp  path_point.hpp  player.hpp  river.path.hpp  river_worm.hpp  server_player.hpp  server_world.hpp  tree.hpp  vertex_data.hpp  world.hpp  world_thread_preview.hpp
include/Cubed/gameplay/builders/: biome_builder.hpp  desert_builder.hpp  forest_builder.hpp  mountain_builder.hpp  ocean_builder.hpp  plain_builder.hpp  river_builder.hpp  snowy_plain_builder.hpp
include/Cubed/tools/: arg_parser.hpp  compression.hpp  cubed_assert.hpp  cubed_hash.hpp  cubed_random.hpp  font.hpp  log.hpp  math_tools.hpp  memory_used.hpp  perlin_noise.hpp  priority_thread_pool.hpp  recent_queue.hpp  shader_tools.hpp  system_info.hpp  system_version.hpp  thread_pool.hpp  toml.utils.hpp
include/Cubed/ui/: color.hpp  text.hpp
scripts/: blocks_tool.py  upscale_nearest.py
src/: CMakeLists.txt  app.cpp  block.cpp  camera.cpp  config.cpp  debug_collector.cpp  dev_panel.cpp  input.cpp  main.cpp  map_table.cpp  renderer.cpp  shader.cpp  texture_manager.cpp  version.hpp.in  window.cpp
src/gameplay/: biome.cpp  block.cpp  cave_carver.cpp  cave_path.cpp  chuck.cpp  chunk.cpp  chunk_generator.cpp  client_chunk.cpp  client_player.cpp  client_world.cpp  network_client.cpp  network_server.cpp  player.cpp  river_path.cpp  river_worm.cpp  server_player.cpp  server_world.cpp  session.cpp  tree.cpp  vertex_data.cpp  world.cpp  world_thread_preview.cpp
src/gameplay/builders/: biome_builder.cpp  desert_builder.cpp  forest_builder.cpp  mountain_builder.cpp  ocean_builder.cpp  plain_builder.cpp  river_builder.cpp  snowy_plain_builder.cpp
src/proto/: packet.proto
src/proto/auth/: auth.proto
src/proto/player/: player.proto
src/proto/world/: block_change.proto  chunk_data.proto  time.proto
src/shaders/: block_f_shader.glsl  fShader.glsl  outline_f_shader.glsl  text_f_shader.glsl  text_v_shader.glsl  ui_f_shader.glsl  ui_v_shader.glsl  vShader.glsl
src/tools/: cubed_random.cpp  font.cpp  log.cpp  math_tools.cpp  perlin_noise.cpp  shader_tools.cpp
src/ui/: text.cpp
triplets/: x64-windows-release.cmake
